k8s-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-nginx
  namespace: demo-pic
spec:
  rules:
  - host: hello-nginx.demo-pic.techlead-top.ovh
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-nginx
          servicePort: web
