k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hello-nginx-BRANCH_NAME
  name: hello-nginx-BRANCH_NAME
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: hello-nginx-BRANCH_NAME
  template:
    metadata:
      labels:
        app: hello-nginx-BRANCH_NAME
    spec:
      containers:
        - name: hello-nginx
          image: cf1n92at.gra5.container-registry.ovh.net/hello-nginx:BRANCH_NAME
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: docker-registry-config

---
apiVersion: v1
kind: Service
metadata:
  name: hello-nginx-BRANCH_NAME
spec:
  selector:
    app: hello-nginx-BRANCH_NAME
  ports:
    - name: web
      port: 80
      targetPort: 80

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: hello-nginx-BRANCH_NAME-web-ui-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`hello-nginx.BRANCH_NAME.demo.apside-top.fr`)
      kind: Rule
      services:
        - name: hello-nginx-BRANCH_NAME
          port: 80
